<?php

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use Database\Factories\UserFactory;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;
use Laravel\Sanctum\HasApiTokens;

class User extends Authenticatable
{
    /** @use HasFactory<UserFactory> */
    use HasApiTokens, HasFactory, Notifiable;

    /**
     * The attributes that are mass assignable.
     *
     * @var list<string>
     */
    protected $fillable = [
        'name',
        'email',
        'password',
        'role',
        'date_creation',
    ];

    /**
     * The attributes that should be hidden for serialization.
     *
     * @var list<string>
     */
    protected $hidden = [
        'password',
        'remember_token',
    ];

    /**
     * Get the attributes that should be cast.
     *
     * @return array<string, string>
     */
    protected function casts(): array
    {
        return [
            'email_verified_at' => 'datetime',
            'password' => 'hashed',
        ];
    }

    public function offres()
    {
        return $this->belongsToMany(Offre::class, 'publiers', 'id_utilisateur', 'id_offre');
    }

    public function notifications()
    {
        return $this->belongsToMany(Notification::class, 'recevoirs', 'id_utilisateur', 'id_notification');
    }

    public function favoris()
    {
        return $this->belongsToMany(Offre::class, 'favoris', 'user_id', 'offre_id')->withTimestamps();
    }

    public function alertes()
    {
        return $this->hasMany(Alerte::class);
    }

    public function signalements()
    {
        return $this->hasMany(Signalement::class);
    }
}
